@@ -250,16 +250,18 @@ class QueryTests(TestCase):
         self.assertEqual(bq(inStock=False), '+inStock:false')
 
     def testBooleanCriteriaQuoting(self):
-        # It's not clear what exactly the output query should be. It would be
-        # most efficient to have it as a simple "+inStock:true" or
-        # "+inStock:false" but it might be hard to parse that in a general way
         bq = self.bq
         self.assertEqual(
             bq(inStock=[1, True, '1', 'True']),
-            '+inStock:(1 OR true or 1 or True)')
+            '+inStock:true')
         self.assertEqual(
             bq(inStock=[0, '', False, '0', 'False', None, (), [], {}, MV]),
-            '+inStock:(0 or false or 0 or False )')
+            '+inStock:false')
+        self.assertEqual(bq(inStock=True), '+inStock:true')
+        self.assertEqual(bq(inStock=1), '+inStock:true')
+        self.assertEqual(bq(inStock='0'), '+inStock:false')
+        self.assertEqual(bq(inStock=[True, False]), '')
+        self.assertEqual(bq(inStock=[1, MV]), '')
 
 
 class InactiveQueryTests(TestCase):
